--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -4,29 +4,17 @@
   <div class="container">
     <form #solicitudForm="ngForm" id="form1">
       <h3>Informacion familiar</h3>
-      <textarea
-        name="infoMama"
-        #infoMama="ngModel"
-        [(ngModel)]="postModelo.infoMama"
-        type="text"
-        placeholder="Detalla la informacion de tu madre. Nombre completo, numero de celular, lugar de empleo, etc."
-      ></textarea>
-      <textarea
-        name="infoPapa"
-        #infoPapa="ngModel"
-        [(ngModel)]="postModelo.infoPapa"
-        type="text"
-        placeholder="Detalla la informacion de tu padre. Nombre completo, numero de celular, lugar de empleo, etc."
-      ></textarea>
+      <textarea cols="35" rows="4" style="resize: none;" name="infoMama" #infoMama="ngModel"
+        [(ngModel)]="postModelo.infoMama" type="text"
+        placeholder="Detalla la informacion de tu madre. Nombre completo, numero de celular, lugar de empleo, etc."></textarea>
+      <textarea cols="35" rows="4" style="resize: none;" name="infoPapa" #infoPapa="ngModel"
+        [(ngModel)]="postModelo.infoPapa" type="text"
+        placeholder="Detalla la informacion de tu padre. Nombre completo, numero de celular, lugar de empleo, etc."></textarea>
       <div class="btn-box">
-        <button
-          [disabled]="
+        <button [disabled]="
             (!infoMama.valid && infoMama.touched) ||
             (!infoPapa.valid && infoPapa.touched)
-          "
-          type="button"
-          id="next1"
-        >
+          " type="button" id="next1">
           Siguiente
         </button>
       </div>
@@ -34,23 +22,13 @@
 
     <form id="form2">
       <h3>Informacion academica</h3>
-      <textarea
-        name="infoColegio"
-        #infoColegio="ngModel"
-        [(ngModel)]="postModelo.infoColegio"
-        type="text"
+      <textarea cols="35" rows="4" style="resize: none;" name="infoColegio" #infoColegio="ngModel"
+        [(ngModel)]="postModelo.infoColegio" type="text"
         placeholder="Detalla la informacion de tus estudios. Centros en los que has estudiado, nivel de estudios, etc."
-        required
-      ></textarea>
+        required></textarea>
 
-      <input
-        name="calificaciones"
-        #calificaciones="ngModel"
-        [(ngModel)]="postModelo.calificaciones"
-        type="text"
-        placeholder="Enlace a tus calificaciones de los ultimos 3 anios."
-        required
-      />
+      <input name="calificaciones" #calificaciones="ngModel" [(ngModel)]="postModelo.calificaciones" type="text"
+        placeholder="Enlace a tus calificaciones de los ultimos 3 anios." required />
 
       <div class="btn-box">
         <button type="button" id="back1">Volver</button>
@@ -60,22 +38,10 @@
 
     <form id="form3">
       <h3>Datos adicionales</h3>
-      <input
-        name="diplomas"
-        #diplomas="ngModel"
-        [(ngModel)]="postModelo.diplomas"
-        type="text"
-        placeholder="Enlace a tus diplomas de graduacion."
-        required
-      />
-      <input
-        name="fotografia"
-        #fotografia="ngModel"
-        [(ngModel)]="postModelo.fotografia"
-        type="text"
-        placeholder="Enlace de tu foto."
-        required
-      />
+      <input name="diplomas" #diplomas="ngModel" [(ngModel)]="postModelo.diplomas" type="text"
+        placeholder="Enlace a tus diplomas de graduacion." required />
+      <input name="fotografia" #fotografia="ngModel" [(ngModel)]="postModelo.fotografia" type="text"
+        placeholder="Enlace de tu foto." required />
       <div class="btn-box">
         <button type="button" id="back2">Volver</button>
         <button type="submit" id="submit" (click)="enviarSolicitud()">
